quick fix timeline on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -665,6 +665,12 @@ section {
   text-decoration: underline;
 }
 
+@media screen and (max-width: 400px) {
+  .events-section {
+    flex-direction: column;
+  }
+}
+
 .application-link {
   color: #586682;
 }
